--- a/Indovina il numero/MainWindow.xaml
+++ b/Indovina il numero/MainWindow.xaml
@@ -7,15 +7,17 @@
         mc:Ignorable="d"
         Title="ThaSupreme" Height="446" Width="679">
     <Grid Background="DarkViolet" >
-        <Button Content="INDOVINA" HorizontalAlignment="Left" Height="45" Margin="255,211,0,0" VerticalAlignment="Top" Width="177" Click="Indovina_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
+        <Button Name="btnIndovina" Content="INDOVINA" IsEnabled="False" HorizontalAlignment="Left" Height="45" Margin="255,199,0,0" VerticalAlignment="Top" Width="177" Click="Indovina_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
         <TextBox Name="txtDifficoltà" HorizontalAlignment="Left" Height="40" Margin="75,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontSize="18" FontWeight="Bold" TextAlignment="Center"/>
-        <Label Name="lblRisultato" Content="" HorizontalAlignment="Left" Height="55" Margin="140,320,0,0" VerticalAlignment="Top" Width="420" FontSize="20" FontWeight="Bold" Foreground="Yellow"/>
+        <Label Name="lblRisultato" Content="" HorizontalAlignment="Left" Height="55" Margin="10,290,0,0" VerticalAlignment="Top" Width="360" FontSize="20" FontWeight="Bold" Foreground="Yellow"/>
         <TextBox Name="txtNumero" IsEnabled="False" HorizontalAlignment="Left" Height="40" Margin="415,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="180" FontSize="18" FontWeight="Bold" TextAlignment="Center"/>
         <Label Content="THASUPREME  GAME"  HorizontalAlignment="Left" Height="45" Margin="10,10,0,0" VerticalAlignment="Top" Width="245" FontWeight="Bold" FontFamily="Showcard Gothic" FontSize="24" Foreground="Yellow"/>
         <Label Content="INSERISCI UN LIVELLLO &#xD;&#xA;DI DIFFICOLTA' DA 1 A N" HorizontalAlignment="Left" Height="40" Margin="75,80,0,0" VerticalAlignment="Top" Width="180" Foreground="Yellow" FontWeight="Bold" FontFamily="Rockwell Extra Bold"/>
         <Label Content="INSERISCI UN NUMERO&#xD;&#xA;DA 1 A N" HorizontalAlignment="Left" Height="40" Margin="415,80,0,0" VerticalAlignment="Top" Width="180" Foreground="Yellow" FontWeight="Bold" FontFamily="Rockwell Extra Bold"/>
-        <Button Content="RESET" HorizontalAlignment="Left" Height="45" Margin="484,211,0,0" VerticalAlignment="Top" Width="177" Click="Reset_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
-        <Button Content="GENERA" HorizontalAlignment="Left" Height="45" Margin="10,211,0,0" VerticalAlignment="Top" Width="177" Click="Genera_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
+        <Button Content="RESET" HorizontalAlignment="Left" Height="45" Margin="484,199,0,0" VerticalAlignment="Top" Width="177" Click="Reset_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
+        <Button Content="GENERA" HorizontalAlignment="Left" Height="45" Margin="10,199,0,0" VerticalAlignment="Top" Width="177" Click="Genera_Click" FontWeight="Bold" FontFamily="Swis721 BlkEx BT" FontSize="18" />
+        <TextBox Name="txtTentativi" HorizontalAlignment="Left" Height="40" Margin="445,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="195" FontSize="18" FontWeight="Bold" TextAlignment="Center"/>
+        <Label Content="INSERISCI I TENTATIVI" HorizontalAlignment="Left" Height="40" Margin="445,274,0,0" VerticalAlignment="Top" Width="195" Foreground="Yellow" FontWeight="Bold" FontFamily="Rockwell Extra Bold" FontSize="14"/>
 
     </Grid>
 </Window>
